<resources>
    <string name="app_name">霍e通</string>

    <string name="dashboard_tab_home">1</string>
    <string name="dashboard_tab_inventory">货品</string>
    <string name="dashboard_tab_cart">购物篮</string>
    <string name="dashboard_tab_transaction">交易</string>
    <string name="dashboard_tab_friend">联系人</string>
    <string name="dashboard_tab_report">营收</string>
    <string name="dashboard_tab_native_report">报表与分析</string>

    <string name="dashboard_fragment_title_home">主页</string>
    <string name="dashboard_fragment_title_tab_inventory">货品与库存</string>
    <string name="dashboard_fragment_title_tab_cart">购物篮</string>
    <string name="dashboard_fragment_title_tab_transaction">交易</string>
    <string name="dashboard_fragment_title_tab_report">报表</string>
    <string name="dashboard_fragment_title_tab_friend">联系人</string>

    <string name="inventory_fragment_add">添 加</string>

    <string name="menu_swtich_shop">切换店铺</string>
    <string name="menu_customer_management">客户管理</string>
    <string name="menu_vendor_management">供应商管理</string>
    <string name="menu_my_outlets">店铺管理</string>
    <string name="menu_user_management">用户管理</string>
    <string name="menu_price_diff">补差价</string>
    <string name="menu_logout">退出账户</string>
    <string name="menu_version_title">当前版本</string>

    <string name="menu_sell_online">网店</string>
    <string name="menu_settings">设&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;置</string>
    <string name="menu_sale_return">退货单</string>

    <string name="menu_user_role_boss">店主</string>
    <string name="menu_user_role_employee">店员</string>

    <!--home fragment-->
    <string name="home_today_sales">今日销售</string>
    <string name="home_today_profit">今日利润</string>
    <string name="home_collect_accounts">应收账款</string>
    <string name="home_today_received">当前应收</string>
    <string name="home_hot_product">热销货品</string>
    <string name="home_new_product">新到货品</string>
    <string name="home_most_product">库存最多</string>

    <string name="home_add_product">添加</string>
    <string name="home_billing_product">开单</string>
    <string name="home_stockin_product">入库</string>

    <string name="home_stock">库存</string>
    <!--Inventory Sort-->
    <string name="transaction_fragment_tab_order">销售订单</string>
    <string name="transaction_fragment_tab_order_all">全部</string>

    <string name="transaction_fragment_tab_shop_basket">购物篮</string>
    <string name="transaction_fragment_tab_order_cancel">已取消</string>
    <string name="transaction_fragment_tab_order_billing">未付款</string>
    <string name="transaction_fragment_tab_order_unpaid">赊账中</string>
    <string name="transaction_fragment_tab_order_paid">已结清</string>

    <string name="transaction_fragment_tab_stoke_in">库存记录</string>
    <string name="transaction_fragment_tab_stoke_in_all">入库记录</string>
    <string name="transaction_fragment_tab_stoke_in_unconfirmed">待确认入库</string>
    <string name="transaction_fragment_tab_stoke_in_adjustment">库存调整</string>
    <string name="transaction_fragment_tab_stoke_retro">补登进价</string>


    <string name="friend_fragment_tab_customer">客户</string>
    <string name="friend_fragment_tab_supplier">供应商</string>

    <!--Inventory Sort-->
    <string name="sort_by_inventory_money">按库存金额降</string>
    <string name="sort_by_inventory_count">按库存量降</string>
    <string name="sort_by_inventory_sales">按90天销售量降</string>
    <string name="sort_by_inventory_purchase_time">按前次进货日期</string>

    <string name="inventory_category_all">全部</string>
    <string name="inventory_category_add">添加</string>

    <!--transaction -->
    <string name="transaction_done">完成</string>
    <string name="transaction_in_order">收货</string>
    <string name="transaction_cancel_title">取消的交易</string>
    <!--Product Search-->
    <string name="product_search_hint">Search</string>

    <!--signature view-->
    <string name="signature_confirm">Done</string>
    <string name="signature_clear">Clear</string>
    <string name="signature_total">Total</string>
    <string name="signature_title">E-Signature</string>

    <!--payment method select view-->
    <string name="payment_method_title">Share via</string>
    <string name="payment_title">Pay</string>
    <string name="payment_scan_qr">Scan QR code</string>

    <string name="select_image">选择图片</string>

    <!--payment result-->
    <string name="payment_result_tag">Money Collected</string>
    <string name="payment_result">Money has been collected.</string>
    <string name="payment_result_recepit">Print</string>

    <string name="http_request_no_internet">无本地网络连接!</string>
    <string name="http_request_generic_server_down">连接服务器超时!</string>
    <string name="http_request_generic_error">网络错误，请稍后重试!</string>
    <string name="http_request_json_params_error">JS send an incorrect Json request body to Native!</string>

    <string name="dashboard_back_button_alert">Please click back button again to exit!</string>

    <string name="selector_folder_all">all images</string>
    <string name="selector_caption">select picture</string>
    <!--http://stackoverflow.com/questions/17502824/whats-wrong-with-this-format-string-->
    <string name="selector_action_done">Complete(%1$d/%2$d)</string>
    <string name="selector_preview">review</string>

    <string name="selector_reach_max_image_hint">You have selected %d photos up!!</string>
    <string name="tip_take_photo">Taking Pictures</string>
    <string name="msg_no_camera">Unable to start the camera!</string>
    <string name="camera_temp_file_error">Picture Error</string>

    <string name="selector_permission_error">Permission error, does not work！</string>

    <!--search tab-->
    <string name="search_all">全部</string>
    <string name="search_inventory">货品</string>
    <string name="search_transaction">交易</string>
    <string name="search_customer">客户</string>
    <string name="search_vendor">供应商</string>

    <string name="home_search_hint">快速查询货品,客户,订单或其他信息</string>
    <string name="home_blurry_search_hint">搜索货品,客户和供应商</string>

    <string name="search_inventory_hint">搜索货品</string>
    <string name="search_customer_hint">搜索客户</string>
    <string name="search_transaction_hint">交易搜索</string>
    <string name="search_vendor_hint">搜索供应商</string>
    <string name="search_product_number">货号</string>
    <string name="search_product_stock">库存</string>

    <string name="search_result_count">共%1$s个结果</string>

    <string name="search_popup_inventory">货品</string>
    <string name="search_popup_customer">客户</string>
    <string name="search_popup_vendor">供应商</string>
    <string name="search_popup_transaction">交易</string>


    <!--report tab-->
    <string name="report_income_tab">营收</string>
    <string name="report_product_tab">货品</string>
    <string name="report_customer_tab">客户</string>
    <string name="report_supplier_tab">供应商</string>

    <!--report list item-->
    <string name="report_product_sales">销售额￥%1$s</string>
    <string name="report_product_sales_number">销量%1$s</string>
    <string name="report_product_profit">利润￥%1$s</string>
    <string name="report_product_inventory">库存%1$s</string>

    <string name="report_customer_sales">销售额￥%1$s</string>
    <string name="report_customer_profit">利润￥%1$s</string>
    <string name="report_customer_receive">应收账款￥%1$s</string>

    <string name="report_supplier_stock">进货额￥%1$s</string>
    <string name="report_supplier_receive">应收账款￥%1$s</string>

    <string name="today">今天</string>


    <string name="report_fragment_switch">report fragment is switch</string>

    <string name="return_to_home">return to home</string>
    <!-- side menu -->
    <string name="shop_management_title_name">切换店铺</string>

    <!--create pre orders -->
    <string name="pre_orders_select_customer">选择客户</string>
    <string name="pre_orders_select_supplier">选择供应商</string>

    <!-- cart management -->
    <string name="cart_management_title_name">张三的订单</string>
    <string name="cart_management_more_text">更 多</string>

    <!--category add -->
    <string name="category_add_text">+ 新的分类</string>
    <string name="category_product_text">货品分类</string>
    <string name="category_modify_product_text">修改类别名称</string>
    <string name="category_add_title">添加分类</string>
    <string name="category_remove">删除</string>
    <string name="category_save">保存</string>

    <!--global search result  -->
    <string name="global_search_product">货品 </string>
    <string name="global_search_product_stock">库存 </string>
    <string name="global_search_product_code">货号 </string>
    <string name="global_search_product_price">￥ </string>
    <string name="global_search_product_more">查看更多货品 </string>

    <string name="global_search_customer">客户</string>
    <string name="global_search_customer_more">查看更多客户</string>

    <string name="global_search_supplier">供应商</string>
    <string name="global_search_supplier_more">查看更多供应商</string>

    <!--new pre order activity-->
    <string name="pre_order_add_product">点击添加商品或直接扫码</string>
    <string name="pre_order_customer">选择客户</string>
    <string name="pre_order_warehouse">选择仓库</string>
    <string name="pre_order_seller">销售员</string>
    <string name="pre_order_date">日期</string>
    <string name="pre_order_delivery">提货方式</string>
    <string name="pre_order_comments">备注</string>

    <!--Toast-->
    <string name="pre_order_sale_number">销售数量不能大于库存</string>
    <string name="pre_order_sale_info">请将商品销售信息填写完整</string>

    <string name="pre_order_buy_info">请将商品采购信息填写完整</string>

    <!--dialog-->
    <string name="dialog_select_product">提交</string>

    <!-- warehouse -->
    <string name="warehouse_setting">设置为默认仓库</string>
    <string name="warehouse_default">默认仓库</string>

    <item name="precart_view_tag" type="id"></item>
    <item name="sku_view_tag" type="id"></item>
    <item name="extra_view_tag" type="id"></item>
    <item name="batch_title_view_tag" type="id"></item>
    <item name="batch_content_view_tag" type="id"></item>

    <!-- sare return -->
    <string name="sale_return_warehouse">"退货后直接入库"</string>
    <string name="sale_return_money_empty">请至少选择一种退款方式</string>
    <string name="sale_return_money_inequal">退款总金额必须为{总价}</string>

    <string name="price_diff_money_empty">请至少选择一种支付方式</string>
    <string name="price_diff_money_inequal">补差价总金额必须为{总价}</string>
    <string name="price_diff_money_over_debt">赊账抵扣金额不能超过该客户赊账总额。</string>

    <string name="purchase_money_empty">请至少选择一种采购支付方式</string>
    <string name="purchase_money_inequal">采购总金额必须为{总价}</string>


    <string name="extra_cost_text">额外费用</string>
    <string name="batch_text">批次</string>


    <!--purchase activity-->
    <string name="purchase_add_product">点击添加商品或直接扫码</string>
    <string name="purchase_supplier">选择供应商</string>
    <string name="purchase_warehouse">选择仓库</string>
    <string name="purchase_seller">销售员</string>
    <string name="purchase_date">日期</string>
    <string name="purchase_delivery">提货方式</string>
    <string name="purchase_comments">备注</string>


</resources>
