<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/signature_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_header_height"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        >

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/common_icon_width"
            android:layout_height="@dimen/common_icon_height"
            android:scaleType="center"
            android:clickable="true"
            android:src="@drawable/icon_back"
            android:layout_marginStart="@dimen/activity_header_margin"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_header_margin"
            android:layout_toEndOf="@id/back_arrow"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/signature_title"/>

    </RelativeLayout>

    <com.honeywell.wholesale.framework.utils.SignatureView
        android:id="@+id/signature_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/signature_header"
        android:layout_above="@+id/relativeLayout" />

    <View
        android:layout_below="@id/signature_view"
        style="@style/SplitView"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_header_height"
        android:layout_alignParentBottom="true"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/sign_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/activity_header_margin"
            android:textColor="@color/gray_light"
            android:text="@string/signature_total"/>

        <TextView
            android:id="@+id/amount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/sign_amount_title"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="$1234.123"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="@dimen/activity_sign_button_width"
            android:layout_height="@dimen/activity_sign_button_height"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="4dp"
            android:layout_centerVertical="true"
            android:background="@drawable/sign_button_bg"
            android:textColor="@drawable/select_sign_text_bg"
            android:textStyle="bold"
            android:text="@string/signature_confirm"
            />
        <Button
            android:id="@+id/clear_button"
            android:layout_width="@dimen/activity_sign_button_width"
            android:layout_height="@dimen/activity_sign_button_height"
            android:layout_toStartOf="@id/confirm_button"
            android:layout_marginEnd="4dp"
            android:layout_centerVertical="true"
            android:background="@drawable/sign_button_bg"
            android:textColor="@drawable/select_sign_text_bg"
            android:textStyle="bold"
            android:text="@string/signature_clear"
            />
    </RelativeLayout>
</RelativeLayout>