<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/category_list_header"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/title_bar_gray_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:paddingTop="19dp"
            android:paddingBottom="19dp"
            android:paddingStart="14dp"
            android:paddingEnd="22dp"
            android:layout_marginStart="4dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_left_btn"
            android:clickable="true"/>

        <com.honeywell.wholesale.ui.base.BaseTextView
            android:id="@+id/category_list_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/category_modify_product_text"
            android:textSize="@dimen/shop_management_title_size"
        />

        <com.honeywell.wholesale.ui.base.BaseTextView
            android:id="@+id/category_list_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingEnd="12dp"
            android:paddingStart="24dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/category_remove"
            android:textSize="@dimen/shop_management_title_size"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/category_editText"
        android:layout_width="match_parent"
        android:layout_marginTop="42dp"
        android:layout_height="54dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:maxLines="1"
        android:maxLength="8"
        android:textSize="15dp"
        android:textColor="#959595"
        android:paddingStart="20dp"
        android:background="@drawable/category_edit_text"
        />

    <Button
        android:id="@+id/category_confirm"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:background="#f3f3f3"
        android:layout_marginTop="42dp"
        android:text="@string/category_save"
        android:textColor="#a1a1a1"/>


</LinearLayout>